--- a/agentapp/templates/app/base.html
+++ b/agentapp/templates/app/base.html
@@ -37,12 +37,9 @@
     <link href="{{ url_for('static', filename='css/drawflow.min.css') }}" rel="stylesheet" />
     <link href="{{ url_for('static', filename='css/workflow.css') }}" rel="stylesheet" />
 
-    <!-- Select2 -->
+    <!-- Select2 CSS-->
     <link href="{{ url_for('static', filename='css/select2_css/select2.min.css') }}" rel="stylesheet" />
     <link href="{{ url_for('static', filename='css/select2_css/select2-bootstrap-5-theme.min.css') }}" rel="stylesheet" />
-    <script src="{{ url_for('static', filename='js/select2_js/jquery.slim.min.js') }}"></script>
-    <script src="{{ url_for('static', filename='js/select2_js/bootstrap.bundle.min.js') }}"></script>
-    <script src="{{ url_for('static', filename='js/select2_js/select2.full.min.js') }}"></script>
     
     <style>
       #network { width: 100%; height: 85vh; background: #f0f0f0; border: 1px solid #ccc; }
@@ -441,6 +438,10 @@
   <script src="{{ url_for('static', filename='js/plugins/smooth-scrollbar.min.js') }}" ></script>
   <!-- Plotly CDN -->
   <script src="https://cdn.plot.ly/plotly-2.27.0.min.js"></script>
+  <!-- Select2 JS -->
+  <script src="{{ url_for('static', filename='js/select2_js/jquery.slim.min.js') }}"></script>
+  <script src="{{ url_for('static', filename='js/select2_js/bootstrap.bundle.min.js') }}"></script>
+  <script src="{{ url_for('static', filename='js/select2_js/select2.full.min.js') }}"></script>
   <script type="text/javascript">
     var csrf_token = "{{ csrf_token() }}";
 
