--- a/agentapp/templates/app/base.html
+++ b/agentapp/templates/app/base.html
@@ -270,10 +270,24 @@
             <span class="text-white nav-link-text ms-1">Probes</span>
           </a>
         </li>
-        
-        
-
       </ul>
+    </div>
+     <div class="sidenav-footer mx-3 ">
+      <div class="card card-background shadow-none card-background-mask-secondary" id="sidenavCard">
+        <div class="full-background" style="background-image: url('/static/img/curved-images/white-curved.jpg')"></div>
+        <div class="card-body text-start p-3 w-100">
+          <div class="icon icon-shape icon-sm bg-white shadow text-center mb-3 d-flex align-items-center justify-content-center border-radius-md">
+            <i class="ni ni-diamond text-dark text-gradient text-lg top-0" aria-hidden="true" id="sidenavCardIcon"></i>
+          </div>
+          <div class="docs-info">
+            <div class="form-check form-switch">
+              <input class="form-check-input" type="checkbox" role="switch" id="tutorialSwitch">
+              <label class="form-check-label" for="tutorialSwitch">Disable Tutorial at Startup</label>
+            </div>
+          </div>
+        </div>
+      </div>
+      <a class="btn btn-primary mt-3 w-100" href="https://www.creative-tim.com/product/soft-ui-dashboard-pro?ref=sidebarfree">Upgrade to pro</a>
     </div>
   </aside>
   <main class="main-content position-relative max-height-vh-100 h-100 border-radius-lg overflow-auto" style="height: 85vh;">
@@ -285,7 +299,7 @@
           <div class="ms-md-auto pe-md-3 d-flex align-items-center">
           </div>
           <ul class="navbar-nav  justify-content-end">
-            <li class="nav-item d-xl-none ps-3 d-flex align-items-center">
+            <li class="nav-item d-xl-none ps-3 d-flex align-items-center mb-3">
               <a href="javascript:;" class="nav-link text-body p-0" id="iconNavbarSidenav">
                 <div class="sidenav-toggler-inner">
                   <i class="sidenav-toggler-line"></i>
@@ -294,7 +308,6 @@
                 </div>
               </a>
             </li>
-            <br>
             <li class="nav-item dropdown pe-2 d-flex align-items-center">
               <a href="javascript:;" class="nav-link text-body p-0" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
                 <i id="notif-bell" class="fa fa-bell cursor-pointer"></i>
